--- a/cn.zh-CN/常用工具/命令行工具/使用示例（新）/更改集相关.md
+++ b/cn.zh-CN/常用工具/命令行工具/使用示例（新）/更改集相关.md
@@ -11,7 +11,7 @@
 |--Action|String|是|CreateChangeSet| 系统规定参数。取值：CreateChangeSet。
 
  |
-|--ChangeSetName|String|是|MyChangeSet| 更改集的名称。 该名称在与指定堆栈关联的所有更改集中必须是唯一的。
+|--ChangeSetName|String|是|MyChangeSet| 更改集的名称。 该名称在与指定资源栈关联的所有更改集中必须是唯一的。
 
  更改集名称只能包含字母数字字符（区分大小写），连字符和下划线。 它必须以字母字符开头，不能超过255个字符。
 
@@ -26,11 +26,11 @@
  N最大值为200。
 
  |
-|--ChangeSetType|String|否|UPDATE| 更改集的类型。 要为新堆栈创建更改集，请指定CREATE。 要为现有堆栈创建更改集，请指定UPDATE。
+|--ChangeSetType|String|否|UPDATE| 更改集的类型。如果需要为新资源栈创建更改集，则指定CREATE。如果需要为现有资源栈创建更改集，则指定UPDATE。
 
- 如果为新堆栈创建更改集，则ROS会创建具有唯一堆栈ID的堆栈。 堆栈将处于REVIEW\_IN\_PROGRESS状态，直到您执行更改集。
+ 如果为新资源栈创建更改集，则ROS会创建具有唯一资源栈ID的资源栈。 资源栈将处于REVIEW\_IN\_PROGRESS状态，直到您执行更改集。
 
- 默认情况下，ROS指定UPDATE。 您不能使用UPDATE类型为新堆栈创建更改集，也不能使用CREATE类型为现有堆栈创建更改集。
+ 默认情况下，ROS指定UPDATE。 您不能使用UPDATE类型为新资源栈创建更改集，也不能使用CREATE类型为现有资源栈创建更改集。
 
  可选值：
 
@@ -45,12 +45,12 @@
  最大长度1024字节。
 
  |
-|--StackName|String|否|MyStack| 要为其创建更改集的新堆栈的名称。堆栈名称可以包含数字、字母（大小写敏感）、连字符、下划线。必须以数字或字母开头，且长度不超过255个字符。
+|--StackName|String|否|MyStack| 要为其创建更改集的新资源栈的名称。资源栈名称可以包含数字、字母（大小写敏感）、连字符、下划线。必须以数字或字母开头，且长度不超过255个字符。
 
  仅在更改集类型为CREATE时生效，且必须指定。
 
  |
-|--StackId|String|否|4a6c9851-3b0f-4f5f-b4ca-a14bf691\*\*\*\*| 要为其创建更改集的现有堆栈的ID。 ROS通过将此堆栈的信息与您提交的信息（例如修改的模板或不同的参数输入值）进行比较来生成更改集。
+|--StackId|String|否|4a6c9851-3b0f-4f5f-b4ca-a14bf691\*\*\*\*| 要为其创建更改集的现有资源栈的ID。 ROS通过将此资源栈的信息与您提交的信息（例如修改的模板或不同的参数输入值）进行比较来生成更改集。
 
  仅在更改集类型为UPDATE时生效，且必须指定。
 
@@ -60,12 +60,12 @@
  您必须指定TemplateBody或TemplateURL参数，但不能同时指定两者。
 
  |
-|--TemplateURL|String|否|oss://ros/template/demo| 包含模板主体的文件的位置。 URL必须指向位于http Web服务器（http，https），或阿里云OSS存储桶（例如oss://ros/template/demo、oss://ros/template/demo?RegionId=cn-hangzhou。OSS地域如未指定，默认与接口参数RegionId相同）中的模板（最大长度：524288字节）。
+|--TemplateURL|String|否|oss://ros/template/demo| 包含模板主体的文件的位置。URL必须指向位于http Web服务器（http，https），或阿里云OSS存储桶（例如oss://ros/template/demo、oss://ros/template/demo?RegionId=cn-hangzhou。OSS地域如未指定，默认与接口参数RegionId相同）中的模板（最大长度：524288字节）。
 
  您必须指定TemplateBody或TemplateURL参数，但不能同时指定两者。
 
  |
-|--TimeoutInMinutes|Long|否|12| 堆栈状态变为CREATE\_FAILED或UPDATE\_FAILED之前可以经过的时间量。
+|--TimeoutInMinutes|Long|否|12| 资源栈状态变为CREATE\_FAILED或UPDATE\_FAILED之前可以经过的时间量。
 
  当更改集类型为CREATE时，则该参数是必需的。当更改集类型为UPDATE时，则为可选参数。
 
@@ -74,10 +74,10 @@
  默认值：10（分钟）。
 
  |
-|--DisableRollback|Boolean|否|false| 如果堆栈创建或更新失败，则设置为true以禁用堆栈回滚。 如果为新堆栈创建更改集，则默认为false，否则将使用先前的值。
+|--DisableRollback|Boolean|否|false| 如果资源栈创建或更新失败，则设置为true以禁用资源栈回滚。 如果为新资源栈创建更改集，则默认为false，否则将使用先前的值。
 
  |
-|--StackPolicyBody|String|否|\{"Statement":\[\{"Effect":"Allow","Action":"Update:\*","Principal":"\*","Resource":"\*"\}\]\}| 包含堆栈策略主体的结构，最小长度为1个字节，最大长度为16384个字节。
+|--StackPolicyBody|String|否|\{"Statement":\[\{"Effect":"Allow","Action":"Update:\*","Principal":"\*","Resource":"\*"\}\]\}| 包含资源栈策略主体的结构，最小长度为1个字节，最大长度为16384个字节。
 
  当更改集类型为CREATE时，您可以指定StackPolicyBody或StackPolicyURL参数，但不能同时指定两者。
 
@@ -89,7 +89,7 @@
 -   StackPolicyDuringUpdateURL
 
  |
-|--StackPolicyURL|String|否|oss://ros/stack-policy/demo| 包含更新堆栈策略的文件的位置。 URL必须指向位于Web服务器（http，https）中的策略（最大长度：16384字节）,或阿里云OSS存储桶（例如oss://ros/stack-policy/demo、oss://ros/stack-policy/demo?RegionId=cn-hangzhou。OSS地域如未指定，默认与接口参数RegionId相同）。URL最大长度为1350字节。
+|--StackPolicyURL|String|否|oss://ros/stack-policy/demo| 包含更新资源栈策略的文件的位置。URL必须指向位于Web服务器（http，https）中的策略（最大长度：16384字节），或阿里云OSS存储桶（例如oss://ros/stack-policy/demo、oss://ros/stack-policy/demo?RegionId=cn-hangzhou。OSS地域如未指定，默认与接口参数RegionId相同）。URL最大长度为1350字节。
 
  当更改集类型为CREATE时，您可以指定StackPolicyBody或StackPolicyURL参数，但不能同时指定两者。
 
@@ -101,9 +101,9 @@
 -   StackPolicyDuringUpdateURL
 
  |
-|--StackPolicyDuringUpdateBody|String|否|\{"Statement":\[\{"Effect":"Allow","Action":"Update:\*","Principal":"\*","Resource":"\*"\}\]\}| 包含临时覆盖堆栈策略主体的结构。最小长度为1个字节，最大长度为16384个字节。
+|--StackPolicyDuringUpdateBody|String|否|\{"Statement":\[\{"Effect":"Allow","Action":"Update:\*","Principal":"\*","Resource":"\*"\}\]\}| 包含临时覆盖资源栈策略主体的结构。最小长度为1个字节，最大长度为16384个字节。
 
- 如果要更新受保护资源，请在此更新期间指定临时覆盖堆栈策略。 如果未指定堆栈策略，则将使用与堆栈关联的当前策略。
+ 如果要更新受保护资源，请在此更新期间指定临时覆盖资源栈策略。 如果未指定资源栈策略，则将使用与资源栈关联的当前策略。
 
  仅在更改集类型为UPDATE时生效。您只能指定以下参数之一：
 
@@ -113,9 +113,9 @@
 -   StackPolicyDuringUpdateURL
 
  |
-|--StackPolicyDuringUpdateURL|String|否|oss://ros/stack-policy/demo| 包含更新堆栈策略的文件的位置。 URL必须指向位于Web服务器（http，https）中的策略（最大长度：16384字节）,或阿里云OSS存储桶（例如oss://ros/stack-policy/demo、oss://ros/stack-policy/demo?RegionId=cn-hangzhou。OSS地域如未指定，默认与接口参数RegionId相同）。URL最大长度为1350字节。
+|--StackPolicyDuringUpdateURL|String|否|oss://ros/stack-policy/demo| 包含更新资源栈策略的文件的位置。 URL必须指向位于Web服务器（http，https）中的策略（最大长度：16384字节）,或阿里云OSS存储桶（例如oss://ros/stack-policy/demo、oss://ros/stack-policy/demo?RegionId=cn-hangzhou。OSS地域如未指定，默认与接口参数RegionId相同）。URL最大长度为1350字节。
 
- 如果要更新受保护资源，请在此更新期间指定临时覆盖堆栈策略。 如果未指定堆栈策略，则将使用与堆栈关联的当前策略。
+ 如果要更新受保护资源，请在此更新期间指定临时覆盖资源栈策略。 如果未指定资源栈策略，则将使用与资源栈关联的当前策略。
 
  仅在更改集类型为UPDATE时生效。您只能指定以下参数之一：
 
@@ -130,7 +130,7 @@
  默认值：false。
 
  |
-|--NotificationURLs.N|RepeatList|否|http://my-site.com/ros-notify| 接收堆栈事件的URL回调地址。仅支持HTTP POST。
+|--NotificationURLs.N|RepeatList|否|http://my-site.com/ros-notify| 接收资源栈事件的URL回调地址。仅支持HTTP POST。
 
  N最大值为5，每个URL的最大长度为1024。
 
@@ -299,7 +299,7 @@ aliyun ros ExecuteChangeSet --ChangeSetId 31e744f4-01a5-4015-bded-9560f4b0****
 |--RegionId|String|是|cn-hangzhou| 更改集所属的地域ID。您可以调用[../DNROS19102457/ZH-CN\_TP\_1422641\_V1.dita\#doc\_api\_ROS\_DescribeRegions](../DNROS19102457/ZH-CN_TP_1422641_V1.dita#doc_api_ROS_DescribeRegions)查看最新的阿里云地域列表。
 
  |
-|--StackId|String|是|4a6c9851-3b0f-4f5f-b4ca-a14bf691\*\*\*\*| 堆栈ID。
+|--StackId|String|是|4a6c9851-3b0f-4f5f-b4ca-a14bf691\*\*\*\*| 资源栈ID。
 
  |
 |--ChangeSetName.N|RepeatList|否|MyChangeSet| 更改集的名称。
