--- a/cn.zh-CN/产品简介/什么是资源编排服务.md
+++ b/cn.zh-CN/产品简介/什么是资源编排服务.md
@@ -1,10 +1,12 @@
 # 什么是资源编排服务 {#concept_28852_zh .concept}
 
-阿里云资源编排服务（Resource Orchestration Service 简称 ROS）是一款帮助阿里云用户简化云计算资源管理和自动化运维的服务。用户遵循 资源编排定义的模板规范，编写资源栈模板。您只需要创建一个描述自己所需的所有阿里云资源（如 ECS 实例、 RDS 数据库实例等）的模板，然后资源编排将根据模板，创建和配置这些资源。在模板中，您定义所需的云计算资源、资源间的依赖关系、资源配置等。资源编排通过编排引擎自动完成所有资源的创建和配置，以达到自动化部署、运维的目的。资源编排模板是一种用户可读、易于编写的文本文件。您可以直接编辑 JSON 格式文本，也可以使用资源编排控制台提供的可视化编辑器，更为直观地编辑模板。您可以随时编辑修改模板。通过 SVN、Git 等版本控制工具可以控制模板的版本，以达到控制基础设施版本的目的。也可以通过 API、SDK 等方式把资源编排的编排能力与自己的应用整合，做到基础设施即代码（Infrastructure as Code）。
+资源编排服务（Resource Orchestration Service， 简称ROS）是阿里云提供的一项简化云计算资源管理的服务。您可以遵循ROS定义的模板规范编写资源栈模板，在模板中定义所需的云计算资源（例如ECS实例、RDS数据库实例）、资源间的依赖关系等。ROS的编排引擎将根据模板自动完成所有资源的创建和配置，实现自动化部署及运维。
 
-资源编排模板也是一种标准化的资源和应用交付方式。如果您是独立软件供应商 \(ISV\)，您可以通过资源编排模板交付包含云资源和应用的整体系统和解决方案。ISV 可以通过这种交付方式，整合阿里云的资源和 ISV 的软件系统，达到统一交付的目的。
+ROS模板是可读、易编写的文本文件。您可以直接编辑JSON格式文本，或者使用ROS控制台提供的可视化编辑器编辑模板。此外，您可以随时编辑修改模板。您可以通过SVN、Git等版本控制工具控制模板的版本，以达到控制基础设施版本的目的。您可以通过API、SDK等方式将ROS的编排能力与自己的应用进行整合，实现基础设施即代码（Infrastructure as Code）。
 
-资源编排服务是通过资源栈 \(Stack\) 这种逻辑集合来统一管理一组云资源（一个资源栈即为一组阿里云资源），所以，对于云资源的创建、删除、克隆等操作，都可以以资源栈为单位来完成。在 DevOps 实践中，可以轻松地克隆开发、测试、线上环境。同时，也可以更容易实现应用的整体迁移和扩容。
+ROS模板也是一种标准化的资源和应用交付方式。如果您是独立软件供应商（ISV），则可以通过ROS模板交付包含云资源和应用的整体系统和解决方案。ISV可以通过这种交付方式，整合阿里云的资源和ISV的软件系统，实现统一交付。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23163/156593185944675_zh-CN.png)
+ROS通过资源栈（Stack）统一管理一组云资源（一个资源栈即为一组阿里云资源）。对于云资源的创建、删除、克隆等操作，都可以以资源栈为单位来完成。在DevOps实践中，您可以使用ROS克隆开发、测试、线上环境，也可以轻松实现应用的整体迁移和扩容。
+
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23163/156860459744675_zh-CN.png)
 
