--- a/cn.zh-CN/快速入门/通过模板创建资源.md
+++ b/cn.zh-CN/快速入门/通过模板创建资源.md
@@ -1,11 +1,13 @@
 # 通过模板创建资源 {#concept_48749_zh .task}
 
-资源编排（ROS）通过模板创建一组阿里云资源。ROS把每组资源定义为一个栈（stack）。ROS通过栈管理，分组维护阿里云资源。
+资源编排服务（ROS）通过模板创建一组阿里云资源。ROS把每组资源定义为一个栈（stack）。ROS通过栈管理，分组维护阿里云资源。
+
+进行操作前，请确保您已经注册了阿里云账号。如还未注册，请先完成[账号注册](https://account.aliyun.com/register/register.htm)。
 
 本文以**simple\_ecs\_instance**模板为例，为您介绍如何在ROS控制台上通过模板创建、管理和维护阿里云资源。ROS模板是JSON格式的文本文件。您可以在这个文本中定义自己的阿里云资源，例如安全组、ECS实例、VPC、RDS实例等。
 
-1.  登录 [ROS控制台](http://ros.console.aliyun.com) 。
-2.  单击左侧导航栏中的**模板样例**，找到**simple\_ecs\_instance**模板。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23169/156593025555396_zh-CN.png)
+1.  登录[ROS控制台](http://ros.console.aliyun.com) 。
+2.  单击左侧导航栏中的**模板样例**，找到**simple\_ecs\_instance**模板。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23169/156860462655396_zh-CN.png)
 
 
 3.  单击**预览**，模板会显示为JSON格式。 **simple\_ecs\_instance**模板的详细信息如下。
@@ -145,13 +147,13 @@
     -   `"Resources" : { }`定义模板可创建的阿里云资源。本例将创建一个ECS实例和一个安全组，资源属性将引用`Parameters`中定义的参数。
     -   `"Outputs": { }`定义资源创建完成后，通过ROS输出栈的资源信息。本例将输出ECS实例的ID、公网IP和安全组ID。
 4.  单击**创建栈**，开始创建您的资源栈。
-5.  在**选择地域（region）**的下拉框中选择您的目标地域，单击**下一步**。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23169/156593025555418_zh-CN.png)
+5.  在**选择地域（region）**的下拉框中选择您的目标地域，单击**下一步**。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23169/156860462655418_zh-CN.png)
 
 
-6.  填写**栈名**，单击**创建**。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1345908/156593025555555_zh-CN.png)
+6.  填写**栈名**，单击**创建**。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1345908/156860462755555_zh-CN.png)
 
 
-7.  单击**管理**，进入栈的管理页面。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1345908/156593025655572_zh-CN.jpg)
+7.  单击**管理**，进入栈的管理页面。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1345908/156860462755572_zh-CN.jpg)
 
 
 8.  在栈的管理页面，查看栈的详情。 
@@ -161,4 +163,6 @@
     -   单击左侧导航栏中的**模板**，查看栈的原始模板。
 
 ROS可以通过用户指定的模板URL地址创建资源栈。您可以通过ROS管理资源，删除资源或者只删除栈而保留资源，也可以根据自己的需求更新资源栈，重新检查资源栈的状态等。
+
+**说明：** 阿里云规定，当您创建按量付费的资源时（例如本例的ECS实例），您的账户中必须有超过100元的现金余额、可用信用额度或可用于开通产品的代金券，否则将导致资源创建失败。
 
