--- a/cn.zh-CN/产品简介/发展历史.md
+++ b/cn.zh-CN/产品简介/发展历史.md
@@ -1,5 +1,7 @@
 # 发展历史 {#concept_28855_zh .concept}
 
--   2015 年 12 月 21 日 资源编排产品上线公测。
--   2016 年 5 月 20 日 资源编排产品商业化。
+本文为您介绍资源编排服务（ROS）的发展历史。
+
+-   2015年12月21日，ROS上线公测。
+-   2016年5月20日，ROS正式商业化。
 
