--- a/cn.zh-CN/API参考（旧）/调用方式/公共参数.md
+++ b/cn.zh-CN/API参考（旧）/调用方式/公共参数.md
@@ -1,12 +1,14 @@
 # 公共参数 {#concept_28904_zh .concept}
 
+本文为您介绍资源编排服务（ROS）旧版API（v20150901版）的公共参数。
+
 ## 公共请求参数 {#section_zvz_rr1_mfb .section}
 
 公共请求参数是指每个接口都需要使用到的请求参数。
 
- **示例** 
+示例
 
-```language-json
+``` {#codeblock_yul_i8l_xoa .language-json}
 POST http://ros.aliyuncs.com/stacks HTTP/1.1
 x-acs-signature-method: HMAC-SHA1
 Authorization: acs <AccessKeyId>:<signature>
@@ -22,16 +24,15 @@ x-acs-region-id:cn-beijing
 Host: ros.aliyuncs.com
 Connection: keep-alive
 Content-Length: 502
-
 ```
 
 ## 公共返回参数 {#section_sdk_vr1_mfb .section}
 
-用户发送的每次接口调用请求，无论成功与否，都会返回一个唯一识别码 X-Acs-Request-Id 在 header 中。若是返回结果报错，请提供该 X-Acs-Request-Id 给工作人员，以便排查问题。
+用户发送的每次接口调用请求，无论成功与否，都会返回一个唯一识别码X-Acs-Request-Id在header中。若是返回结果报错，请提供该X-Acs-Request-Id给工作人员，以便排查问题。
 
- **示例** 
+示例
 
-```language-json
+``` {#codeblock_z7f_k5z_lrq .language-json}
 HTTP/1.1 201 Created
 Date: Fri, 11 Sep 2015 05:28:48 GMT
 Content-Type: application/json
@@ -45,7 +46,5 @@ X-Acs-Request-Id: 14EB3BE2-B4A8-4F84-BD6E-52F222DDB66C
 Server: Jetty(7.2.2.v20101205)
 
 /* 返回结果数据 */
-
-
 ```
 
