--- a/cn.zh-CN/API参考（旧）/其他接口/查询事件列表.md
+++ b/cn.zh-CN/API参考（旧）/其他接口/查询事件列表.md
@@ -1,6 +1,6 @@
 # 查询事件列表 {#concept_28925_zh .concept}
 
-通过 GET 方法调用 /stacks/\{StackName\}/\{StackId\}/events 查询某个资源栈及其下面资源的事件
+通过 GET 方法调用 /stacks/\{StackName\}/\{StackId\}/events 查询某个资源栈及其下面资源的事件。
 
 ## 请求参数 {#section_nng_jdb_mfb .section}
 
@@ -21,7 +21,7 @@
 |PageSize|Integer|设置的每页行数。|
 |Events|List|事件对象列表，具体属性参见以下 Event 表。|
 
- **Event** 
+**Event**
 
 |名称|参数类型|描述|
 |ResourceStatus|String|资源的状态。|
@@ -31,7 +31,7 @@
 |ResourceId|String|资源的 ID。|
 |ResourceType|String|资源类型。|
 |ResourcePhysicalId|String|资源的物理 ID。|
-|Time|String|事件的创建时间，按照ISO8601标准表示，并需要使用UTC时间。格式为：YYYY-MM-DDThh:mm:ssZ。|
+|Time|String|事件的创建时间，按照 ISO8601 标准表示，并需要使用 UTC 时间。格式为：YYYY-MM-DDThh:mm:ssZ。|
 
 ## 错误码 {#section_ivz_rdb_mfb .section}
 
@@ -41,9 +41,9 @@
 
 ## 示例 {#section_ozs_5db_mfb .section}
 
-**请求示例**
+请求示例
 
-```language-json
+``` {#codeblock_0hg_4ql_cj3 .language-json}
 GET http://ros.aliyuncs.com/ stacks/myStack/378826b1-a71b-4c14-aa91-9b36351fbea9/events HTTP/1.1
 x-acs-signature-method: HMAC-SHA1
 Authorization: acs ACSTQDkNtSMrZtwL:fWkOnYo6QzK3KvMANKE0VFeBos4=
@@ -58,12 +58,12 @@ User-Agent: Java/1.6.0_27
 Host: ros.aliyuncs.com
 Connection: keep-alive
 
-
+			
 ```
 
-**返回示例**
+返回示例
 
-```language-json
+``` {#codeblock_pif_xtf_7gy .language-json}
 HTTP/1.1 200 OK
 Date: Fri, 11 Sep 2015 05:31:53 GMT
 Content-Type: application/json; charset=UTF-8
@@ -103,6 +103,6 @@ Server: Jetty(7.2.2.v20101205)
   "PageSize" : 2
 }
 
-
+			
 ```
 
