--- a/cn.zh-CN/API参考（新）/公共错误码.md
+++ b/cn.zh-CN/API参考（新）/公共错误码.md
@@ -1,8 +1,10 @@
 # 公共错误码 {#concept_1796684 .concept}
 
+公共错误码分为客户端错误码和服务端错误码。
+
 ## 客户端错误 {#section_xog_q3i_0pe .section}
 
-|错误代码|错误信息|Http状态码|描述|
+|错误代码|错误信息|HTTP状态码|描述|
 |----|----|-------|--|
 |UnknownError|The request processing has failed due to some unknown error.|400|客户端出现非服务端原因的未知错误。|
 |MissingParameter|The input parameter \{name\} should be specified.|400|缺少参数，name为参数名。|
