--- a/cn.zh-CN/常用工具/命令行工具/使用示例（新）/资源栈相关.md
+++ b/cn.zh-CN/常用工具/命令行工具/使用示例（新）/资源栈相关.md
@@ -1,6 +1,6 @@
 # 资源栈相关 {#concept_2118415 .concept}
 
-本文为您介绍如何使用命令行工具调用资源栈相关的API。
+本文为您介绍如何通过阿里云CLI调用资源栈相关的API。
 
 ## CreateStack {#section_9ag_g3o_x2a .section}
 
