--- a/cn.zh-CN/常用工具/命令行工具/使用示例（新）/资源相关.md
+++ b/cn.zh-CN/常用工具/命令行工具/使用示例（新）/资源相关.md
@@ -1,6 +1,6 @@
 # 资源相关 {#concept_2118416 .concept}
 
-本文为您介绍如何使用命令行工具调用资源相关的API。
+本文为您介绍如何通过阿里云CLI（3.0.25及以上版本）调用资源相关的API。
 
 ## GetResourceType {#section_hvk_65t_kip .section}
 
