--- a/cn.zh-CN/常见问题/删除资源栈失败的原因.md
+++ b/cn.zh-CN/常见问题/删除资源栈失败的原因.md
@@ -1,6 +1,8 @@
 # 删除资源栈失败的原因 {#concept_qtn_wrx_kfb .concept}
 
+本文为您介绍删除资源栈失败的原因。
+
 如果您不能删除一个资源栈，是因为该资源栈正在操作中。
 
-如果资源栈正在创建中、更新中或者其它操作中，只有等到操作成功或者失败后，才能够删除该资源栈。
+如果资源栈正在创建中、更新中或者其它操作中，您只有等到操作成功或者失败后，才能够删除该资源栈。
 
