--- a/cn.zh-CN/用户指南/资源栈管理/创建资源栈.md
+++ b/cn.zh-CN/用户指南/资源栈管理/创建资源栈.md
@@ -7,9 +7,9 @@
 如果您已建好模板，请在资源编排控制台**我的模板**页面，选择已建好的模板，然后单击**创建栈**进入创建流程。此外，您也可以根据**模板样例**快速创建资源栈，详情请参见[通过模板样例创建资源栈](../../../../cn.zh-CN/快速入门/通过模板创建资源.md#)。
 
 1.  登录[资源编排控制台](http://ros.console.aliyun.com)。
-2.  在左侧导航栏中，单击**资源栈管理**。
-3.  在资源栈列表窗口中，单击**新建资源栈**。
-4.  在创建Stack窗口中，选择**所在region**和**模板源**，填写模板数据。 模板为JSON格式的文本文件，使用UTF-8编码。有关模板的详情，请参见[模板结构说明](cn.zh-CN/用户指南/模板语法/模板结构说明.md#)。您也可以使用可视化编辑器编辑模板，详情请参见[可视化编辑器示例](cn.zh-CN/用户指南/可视化编辑器示例.md#)。
+2.  单击左侧导航栏中的**资源栈管理**。
+3.  单击右上角的**新建资源栈**。
+4.  在**选择地域（region）**和**模板源**的下拉列表中，分别选择您即将创建的资源的所属地域和模板源，并填写**模板数据**。 模板为JSON格式的文本文件，使用UTF-8编码。有关模板的详情，请参见[模板结构说明](cn.zh-CN/用户指南/模板语法/模板结构说明.md#)。您也可以使用可视化编辑器编辑模板，详情请参见[可视化编辑器示例](cn.zh-CN/用户指南/可视化编辑器示例.md#)。
 5.  单击**下一步**。
 6.  填写启动栈所需的各项参数。 不同类型的资源栈需要输入的参数不同。
 7.  单击**创建**。 您可以在资源栈管理页面，查看当前创建的资源栈状态和信息。
