--- a/intl.zh-CN/常见问题/模板验证失败的原因.md
+++ b/intl.zh-CN/常见问题/模板验证失败的原因.md
@@ -1,46 +1,46 @@
-# 模板验证失败的原因 {#concept_28930_zh .concept}
+# 模板验证失败的原因
 
-如果您编辑的资源栈模板在验证时，验证失败，请检查以下项目。
+如果您编辑的资源栈模板在验证时验证失败，请检查以下项目。
 
-## 格式 {#section_kdr_knx_kfb .section}
+## 格式
 
-请确保模板格式为有效的 JSON 格式文件，并使用 UTF-8 编码。有效是指 JSON 应该能够被程序语言正常的解析。
+请确保模板为有效的JSON或YAML格式文件，并使用UTF-8编码。有效是指JSON或YAML能够被程序语言正常解析。
 
-## 版本（ROSTemplateFormatVersion） {#section_m2w_knx_kfb .section}
+## 版本（ROSTemplateFormatVersion）
 
-检查 ROSTemplateFormatVersion 拼写正确，并且值为 2015-09-01。
+检查ROSTemplateFormatVersion拼写正确，并且值为2015-09-01。
 
-## 映射（Mappings） {#section_ilx_knx_kfb .section}
+## 映射（Mappings）
 
 检查映射定义是否符合资源编排的规定。
 
 **说明：** 在映射中，不能使用函数。
 
-## 参数（Parameters） {#section_t5y_knx_kfb .section}
+## 参数（Parameters）
 
 检查参数定义是否符合资源编排的规定。
 
-**说明：** 在参数中，不能使用函数；在参数定义中，如果有参数限制定义和 default 值，那么 default 值也必须符合参数限制定义。
+**说明：** 在参数中，不能使用函数。在参数定义中，如果有参数限制定义和Default值，那么Default值也必须符合参数限制定义。
 
-## 资源（Resources） {#section_npp_snx_kfb .section}
+## 资源（Resources）
 
-资源 ID 不能包含正斜杠 （/） 字符。
+资源 ID不能包含正斜线 （/）。
 
-资源定义必须包含 Type 属性，而且值必须为字符串。
+资源定义必须包含Type属性，而且值必须为字符串。
 
-资源定义中，不能包含有除 Type、Properties、Metadata、DependsOn、DeletionPolicy、和 Description 以外的值。
+资源定义中，不能包含有除Type、Properties、Metadata、DependsOn、DeletionPolicy和Description以外的值。
 
-## 输出（Outputs） {#section_uwq_snx_kfb .section}
+## 输出（Outputs）
 
-如果定义了输出部分，则必须在输出部分定义 value 属性。
+如果定义了输出部分，则必须在输出部分定义Value属性。
 
-## 不受支持的资源类型 {#section_wcs_snx_kfb .section}
+## 不受支持的资源类型
 
 如果模板中定义了不受支持的资源，则验证失败。
 
-## 其他 {#section_uht_snx_kfb .section}
+## 其他
 
-检查模板文件大小，确认模板不超过 512KB。
+检查模板文件大小，确认模板不超过512KB。
 
-检查确认在模板的第一级没有使用除 ROSTemplateFormatVersion、Description、Mappings、Parameters、Resources、和 Outputs 之外的 section。
+检查确认在模板的第一级没有使用除ROSTemplateFormatVersion、Description、Mappings、Parameters、Resources和Outputs之外的字段。
 
